# pttlog

./: .gitignore  :w  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  parser.rs
.github/workflows/: release.yml
example/: timesheet
src/: app.rs  lib.rs  main.rs  parser.rs  ui.rs
src/app/: config.rs  entry_view.rs  loader.rs
src/component/: day.rs  day_breakdown_chart.rs  day_breakdown_table.rs  daysheet.rs  filter.rs  interval_view.rs  line_item_table.rs  log_table.rs  mod.rs  status.rs  token_summary_table.rs  week.rs
src/model/: entries.rs  mod.rs  model.rs  time.rs
src/parser/: filter.rs  mod.rs  timesheet.rs  token.rs
src/ui/: mod.rs
tmp/: main.typ
