[package]
name = "pttlogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
date = "0.1.3"
nom = "7.1.1"
tui = "0.19.0"
